test_regress/t/t_constraint_assoc_arr_bad.out
%Warning-CONSTRAINTIGN: t/t_constraint_assoc_arr_bad.v:13:20: For performance considerations, constrained randomization of associative arrays is only supported for string indices smaller than or equal to 128 bits.
   13 |         string_arr["a_very_long_string"] == 65;
      |                    ^~~~~~~~~~~~~~~~~~~~
                        ... For warning description see https://verilator.org/warn/CONSTRAINTIGN?v=latest
                        ... Use "/* verilator lint_off CONSTRAINTIGN */" and lint_on around source to disable this message.
%Error: Exiting due to
